字幕自動縮小をボタンオプション化
あっとちゃんねるず対応
一部アイコンの差し替え
リソースファイルの整理
readme更新

--- a/SpeechCast/SpeechCast.csproj
+++ b/SpeechCast/SpeechCast.csproj
@@ -211,14 +211,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app3.ico" />
-    <None Include="Resources\bullhorn.png" />
-    <None Include="Resources\bullhorn.bmp" />
-    <None Include="Resources\boost.png" />
-    <None Include="Resources\20651.png" />
-    <None Include="Resources\play.png" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
