レス読み後の字幕表示時間が短くなっていた問題対応のため、設定項目にレス表示時間を追加

--- a/SpeechCast/SpeechCast.csproj
+++ b/SpeechCast/SpeechCast.csproj
@@ -280,6 +280,9 @@
     </Compile>
     <Compile Include="Response.cs" />
     <Compile Include="UseConfig.cs" />
+    <Content Include="README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="app3.ico" />
