半角カタカナを認識しない音声エンジンがあるようなので、読み上げ時に内部で半角→全角変換するよう修正

--- a/SpeechCast/SpeechCast.csproj
+++ b/SpeechCast/SpeechCast.csproj
@@ -112,6 +112,7 @@
     <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Speech">
@@ -210,6 +211,7 @@
     <Compile Include="FormWrite.Designer.cs">
       <DependentUpon>FormWrite.cs</DependentUpon>
     </Compile>
+    <Compile Include="includes\Japanese.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Controls\ButtonRunEditor.resx">
