--- a/SpeechCast/SpeechCast.csproj
+++ b/SpeechCast/SpeechCast.csproj
@@ -148,14 +148,14 @@
     <Compile Include="Controls\MyToolStrip.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\TabPageImg.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Controls\TabPageImg.Designer.cs">
-      <DependentUpon>TabPageImg.cs</DependentUpon>
-    </Compile>
     <Compile Include="Controls\ToolStripTrackBar.cs">
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="FormViewResource.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormViewResource.Designer.cs">
+      <DependentUpon>FormViewResource.cs</DependentUpon>
     </Compile>
     <Compile Include="FormAbout.cs">
       <SubType>Form</SubType>
@@ -228,8 +228,8 @@
       <DependentUpon>FormWaitForEdit.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Controls\TabPageImg.resx">
-      <DependentUpon>TabPageImg.cs</DependentUpon>
+    <EmbeddedResource Include="FormViewResource.resx">
+      <DependentUpon>FormViewResource.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormAbout.resx">
       <DependentUpon>FormAbout.cs</DependentUpon>
