自動次スレ移動時のスレタイ読み上げにその段階のレス数が含まれていた問題の修正
レス取得時に末尾移動する機能の代わりにオートスクロール機能を追加

--- a/SpeechCast/SpeechCast.csproj
+++ b/SpeechCast/SpeechCast.csproj
@@ -220,6 +220,7 @@
     <Compile Include="includes\Japanese.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="Resources\resView.html" />
     <EmbeddedResource Include="Controls\ButtonRunEditor.resx">
       <DependentUpon>ButtonRunEditor.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -301,9 +302,7 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.1">
       <Visible>False</Visible>
@@ -320,6 +319,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
