--- a/SpeechCast/SpeechCast.csproj
+++ b/SpeechCast/SpeechCast.csproj
@@ -70,7 +70,7 @@
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
